@@ -29,6 +29,25 @@
 	    </div> <!-- sidebar-first -->
 	    <div class="col-md-9 main-content">
 	      <div class="inner clearfix">
+				  <div class="resp-true" id="info-text">
+            Wanneer registreren?<br />Mijn Bibliotheek nog niet gebruikt? <br />Registreer je nu en gebruik de toepassing om:
+              <ul>
+                <li>je uitleningen online te verlengen</li>
+                <li>je uitleningshistoriek te bekijken</li>
+                <li>materialen uit de bibliotheek te reserveren</li>
+                <li>digitale collecties van je bibliotheek te raadplegen</li>
+              </ul>
+				  </div>
+	      
+	        <div class="resp-false">
+            Wanneer registreren?<br />Mijn Bibliotheek nog niet gebruikt? <br />Registreer je nu en gebruik de toepassing om:
+              <ul>
+                <li>je uitleningen online te verlengen</li>
+                <li>je uitleningshistoriek te bekijken</li>
+                <li>materialen uit de bibliotheek te reserveren</li>
+                <li>digitale collecties van je bibliotheek te raadplegen</li>
+              </ul>
+	        </div>
 			    <div class="left">
 			      <a href="#" class="button blue">Aanmelden</a>
 			    </div>
@@ -37,7 +56,7 @@
 				    <a href="#" class="button red">Registreren</a>
 				  </div>
 				  <div class="col-md-9 subrow last">
-	          <a href="#" class="extra">Wat is Mijn Bibliotheek?</a>				  
+	          <a href="#" class="toggle-text extra resp-true">Wat is Mijn Bibliotheek?</a>				  
 				  </div>
 				</div> <!-- inner -->
 		  </div> <!-- main-content -->
@@ -52,5 +71,6 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="javascripts/bibnet.js"></script>
 </body>
 </html>
