@@ -277,6 +277,12 @@
     }
   }
   
+  /* Info text */
+  #info-text {
+    margin-top: 20px;
+    display: none;
+  }
+  
   /* General preloader */
   #preloader-general {
     background: #f3f3f3;
